# lsp28dfw-rs

./: Cargo.toml  README.md
examples/: linux.rs
src/: fifo.rs  interrupts.rs  lib.rs  lowlevel.rs  readdevice.rs  register_access.rs  run.rs  startstop.rs  state.rs
src/lps28dfw/: interrupts.rs  register_access.rs  run.rs
tests/: integration_test.rs  mod.rs
tests/common/: mod.rs
