[package]
name = "lps28dfw"
version = "0.1.3"
authors = ["Timo Werner <t.w92@gmx.de>"]
repository = "https://github.com/tomatenkuchen/lps28dfw"
license = "MIT or Apache-2.0"
description = "Platform-agnostic Rust driver for the LPS28DFW pressure sensor"
readme = "README.md"
keywords = ["pressure", "ST", "MEMS", "multi-fluid"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/tomatenkuchen/lps28dfw"
documentation = "https://docs.rs/lps28dfw"
include = ["/**/*.rs", "/Cargo.toml", "/README.md", "/LICENSE-MIT"]

[dependencies]
embedded-hal = "1.0"
uom = "0.36.0"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.11", default-features = false, features = [
  "eh1",
] }
approx = "0.5.1"

[profile.release]
lto = true
